--- a/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/manifest.json
+++ b/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/manifest.json
@@ -6,5 +6,22 @@
   "action": {
     "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
-  }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+    "content_scripts": [
+      {
+        "js": [
+          "scripts/content.js"
+        ],
+        "matches": [
+          "https://www.google.com/"
+        ]
+      }
+    ]
 }
