--- a/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/manifest.json
+++ b/extension/GoogleChrome chrome-extensions-samples main functional-samples-tutorial.hello-world/manifest.json
@@ -21,7 +21,10 @@
   "content_scripts": [
     {
       "js": ["scripts/content.js"],
-      "matches": ["https://www.google.com/*"]
+          "matches": [
+            "http://*/*",
+            "https://*/*"
+          ]
     }
   ]
 }
